--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.skyscreamer</groupId>
-            <artifactId>jsonassert</artifactId>
-            <version>1.5.0</version>
+            <groupId>com.pgs-soft</groupId>
+            <artifactId>HttpClientMock</artifactId>
+            <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
