--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>uk.offtopica</groupId>
     <artifactId>monerorpc</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
 
     <name>monerorpc</name>
     <description>Java interface for Monero wallet and daemon RPC</description>
@@ -22,7 +20,7 @@
         <url>https://github.com/00-matt/monerorpc</url>
         <connection>scm:git:git://github.com/00-matt/monerorpc.git</connection>
         <developerConnection>scm:git:git@github.com:00-matt/monerorpc.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>monerorpc-0.1.0</tag>
     </scm>
 
     <licenses>
