Add MockServer dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <jackson.version>2.10.2</jackson.version>
         <junit.version>5.6.0</junit.version>
         <lombok.version>1.18.12</lombok.version>
+        <mockserver.version>5.11.1</mockserver.version>
     </properties>
 
     <dependencyManagement>
@@ -130,6 +131,24 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-client-java</artifactId>
+            <version>${mockserver.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-junit-jupiter</artifactId>
+            <version>${mockserver.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>${mockserver.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
